--- a/curso-react/5_REQUISICOESHTTP/requisicoes-http/src/App.css
+++ b/curso-react/5_REQUISICOESHTTP/requisicoes-http/src/App.css
@@ -13,3 +13,21 @@
 .read-the-docs {
   color: #888;
 }
+
+form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 2rem;
+}
+form input{
+  display: flex;
+  flex-direction: column;
+  margin: 1rem 0rem;
+}
+
+.disabled{
+  filter: blur(3px);
+}
