--- a/curso-react/8_MINIBLOG-PROJECT/miniblog-project/src/pages/Login/Login.module.css
+++ b/curso-react/8_MINIBLOG-PROJECT/miniblog-project/src/pages/Login/Login.module.css
@@ -9,3 +9,11 @@
   .login span{
     margin-top: 1rem;
   }
+
+  .login h1{
+    margin-top: 3rem;
+  }
+
+  .login button{
+    margin-top: 2rem;
+  }
