--- a/curso-react/8_MINIBLOG-PROJECT/miniblog-project/src/pages/Search/Search.module.css
+++ b/curso-react/8_MINIBLOG-PROJECT/miniblog-project/src/pages/Search/Search.module.css
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
   }
   
   .search_container h1 {
@@ -10,11 +11,14 @@
     
   }
 
+  .noposts{
+    text-align: center;
+  }
+
   .search_container h2{
     margin-top: 2.5rem;
   }
 
-  .searc
   
   .search_container p {
     margin-bottom: 30px;
