--- a/curso-react/9_HOOKS/using-hooks/src/index.css
+++ b/curso-react/9_HOOKS/using-hooks/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color: rgba(0, 0, 0, 0.87);
+
   background-color: #e6e6e6;
 
 }
@@ -38,6 +38,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: white;
 }
 button:hover {
   border-color: #646cff;
