First day working on webfit project 23/01

--- a/project-react/webfit/src/App.css
+++ b/project-react/webfit/src/App.css
@@ -4,6 +4,10 @@
   transition: filter 300ms;
 }
 
+.cursive{
+  font-family: "Kaushan Script" !important;
+  font-weight: 300;
+}
 
 @keyframes logo-spin {
   from {
