--- a/project-react/webfit/src/pages/Home/Home.module.css
+++ b/project-react/webfit/src/pages/Home/Home.module.css
@@ -1,8 +1,37 @@
 .home_container{
-    height: 700px;
-    background-color: var(--light-green);
+    height: 45vw;
+    background-image: url("../../assets/banner-home2.png");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
 
 .home_container h1{
     margin: 0;
+}
+
+.description{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-width: 700px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 3.5em 2em 3em 2em;
+}
+
+.description h4{
+    font-size: 3em;
+    margin: 0 auto;
+}
+
+.description p {
+    font-size: 1.5em;
+}
+
+.banner_secundario{
+    height: 45vw;
+    background-image: url("../../assets/banner-secundario.png");
+    background-repeat: no-repeat;
+    background-size: contain;
 }
