--- a/project-react/webfit/src/App.css
+++ b/project-react/webfit/src/App.css
@@ -1,5 +1,5 @@
 .logo {
-  height: 3.3em;
+  height: 3.05em;
   will-change: filter;
   transition: filter 300ms;
 }
@@ -7,6 +7,15 @@
 .cursive{
   font-family: "Kaushan Script" !important;
   font-weight: 300;
+  letter-spacing: 1px;
+}
+
+.btn-green{
+  padding: 1em 2em;
+  border-radius: 40px;
+  border: none;
+  background-color: var(--banner-green);
+  color: white;
 }
 
 @keyframes logo-spin {
