--- a/project-react/webfit/src/index.css
+++ b/project-react/webfit/src/index.css
@@ -15,5 +15,52 @@ body{
 }
 
 
+input::placeholder,
+textarea::placeholder {
+  font-family: "Montserrat", sans-serif;
+}
 
+input:focus,
+textarea:focus {
+  outline: none;
+}
 
+/* form styles */
+form {
+  max-width: 40%;
+  margin: 0 auto;
+}
+
+label {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 1em;
+}
+
+label span {
+  margin-bottom: 0.3em;
+  font-weight: bold;
+  text-align: left;
+}
+
+input,
+textarea {
+  box-sizing: border-box;
+  border: none;
+  border-bottom: 1px solid #ccc;
+  padding: 0.8em 0em;
+  background-color: transparent;
+}
+
+input::placeholder,
+textarea::placeholder {
+  color: #aaa;
+}
+
+.error {
+  color: #721c24;
+  background-color: #f8d7da;
+  border: 1px solid #f5c6cb;
+  padding: 5px;
+  border-radius: 5px;
+}
