feat:auth system completed + fix:navbar

--- a/project-react/webfit/src/components/NavBar/NavBar.module.css
+++ b/project-react/webfit/src/components/NavBar/NavBar.module.css
@@ -43,6 +43,7 @@
     font-size:0.95em;
     font-family: "MontSerrat";
     letter-spacing: 2px;
+    cursor: pointer;
 }
 
 .nav_container a:hover{
