--- a/project-react/webfit/src/index.css
+++ b/project-react/webfit/src/index.css
@@ -58,7 +58,7 @@ textarea::placeholder {
 }
 
 .error {
-  color: #721c24;
+  color: #721c24 !important;
   background-color: #f8d7da;
   border: 1px solid #f5c6cb;
   padding: 5px;
