--- a/project-react/webfit/src/pages/Home/Home.module.css
+++ b/project-react/webfit/src/pages/Home/Home.module.css
@@ -55,6 +55,22 @@
     width: 50%;
 }
 
+.aboutDesc_container p {
+    font-size: 20px;
+    color: rgb(22, 22, 22);
+}
+
+.aboutDesc_container h4{
+    font-size: 3em;
+    color: var(--banner-green);
+    margin: 0;
+}
+
+.aboutDesc_container span{
+    font-size: 3em;
+    font-weight: bolder;
+}
+
 .aboutImg_container{
     display: flex;
     flex-direction: column;
@@ -63,12 +79,16 @@
     width: 50%;
 }
 
+.aboutImg_container img{
+    max-width: 590px;
+}
+
 .bennefits_container{
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 6rem 0rem;
+    padding: 7rem 1rem;
 }
 
 .bennefits_container h4{
