--- a/project-react/webfit/src/pages/CalculadoraIMC/Calculadora.module.css
+++ b/project-react/webfit/src/pages/CalculadoraIMC/Calculadora.module.css
@@ -3,24 +3,15 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 1350px;
-    margin: 20px auto;
+    margin: 40px auto;
 }
 
 .calculadora_container h1{
     color: var(--banner-green);
-    font-size: 40px;
+    font-size: 46px;
     margin-bottom: 5rem;
 }
 
-.options_typeage{
-    display: flex;
-    gap: 50px;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin: 10px auto;
-}
 
 .form_imc{
     display: flex;
@@ -30,7 +21,8 @@
     padding: 2rem 0rem;
     border: 2px solid var(--banner-green);
     border-radius: 20px;
-    width: 100%;
+    width: 440px;
+    max-width: 1350px;
 }
 
 .form_imc label{
@@ -42,9 +34,13 @@
 }
 
 .form_imc span{
-    margin: 10px 0px 0px 0px;
-    font-size: 14px;
+    margin: 16px 0px 0px 0px;
+    font-size: 16px;
     color: grey;
+}
+
+.form_imc input{
+    font-size: 1em;
 }
 
 .typeAge_div{
@@ -63,7 +59,7 @@
 }
 
 .form_container h3{
-    margin: 30px auto 20px auto;
+    margin: 10px auto 30px auto;
     text-align: center;
     font-size: 24px;
 }
@@ -75,10 +71,12 @@
     justify-content: space-between;
     gap: 50px;
     padding: 6rem 3rem;
+    max-width: 1350px;
 }
 
 .result_container h4{
     font-size: 40px;
+    color: grey;
 }
 
 .result_container p{
@@ -92,7 +90,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 3rem;
+    padding: 3rem 0rem;
+    width: 100%;
 }
 
 .img_results_container{
@@ -102,11 +101,36 @@
     justify-content: center;
     gap: 30px;
     text-align: center;
+    max-width: 1350px;
 }
 
 .img_results_container p{
     text-align: start;
     margin-left: 10px;
+}
+
+.circunference_container{
+    display: flex;
+    flex-direction: row;
+    gap: 60px;
+    align-items: center;
+    justify-content: center;
+    padding: 4rem 3rem 3rem 3rem;
+    max-width: 1350px;
+}
+
+.flex_column{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.flex_row{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
 }
 
 
